# liblyric

./: LyricSearch.c  LyricSearch.h  LyricSearchCurl.c  LyricSearchCurl.h  LyricSogouSearch.c  LyricTtSearch.c  LyricTtSearch.h  Makefile  Makefile.am  README  autogen.sh  configure.in  liblyric-gtk2.pc.in  liblyric-gtk3.pc  liblyric-gtk3.pc.in  liblyric.pc.in
data/: Makefile.am  download.glade
debian/: README  README.Debian  README.source  changelog  control  copyright  liblyric-totem.install  liblyric.dirs  liblyric.install  rules
liblyric/: LibLyric.h  LyricDownloader.c  LyricDownloader.h  LyricFunc.c  LyricFunc.h  LyricSearch.c  LyricSearch.h  LyricShow.c  LyricShow.h  LyricShowIface.c  LyricShowIface.h  LyricShowTreeView.c  LyricShowTreeView.h  LyricShowTreeview.c  LyricSogouSearch.c  LyricSogouSearch.h  LyricTtSearch.c  Makefile.am  Makefile.test  common.marshal  gtkbininstance.c  gtkbininstance.h  lyriclinewidget.c  lyriclinewidget.h  lyricread.c  lyricread.h  lyricshowmenu.c  lyricshowmenu.h  lyricshowtreeview.h  lyricshowviewport.c  lyricshowviewport.h
po/: LINGUAS  POTFILES  POTFILES.in  POTFILES.skip  liblyric.pot  zh_CN.po  zh_HK.po  zh_TW.po
totem-plugin/: Makefile.am  totem-lyric.plugin.in  totemlyricplugin.c
